# roting

./: .gitignore  Cargo.toml  README.md  config.example.toml  test.xml
deploy/: rioting.service
src/: camera.rs  config.rs  hls.rs  main.rs  onvif.rs  server.rs  tapo.rs
static/: index.html
