[package]
name = "rioting"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.32"
retina = "0.4.19"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tower-http = {version="0.6.8", features=["cors", "fs"]}
url = "2.5.8"
